style: fix lighten image on ios safari

--- a/src/app/components/App/style.module.css
+++ b/src/app/components/App/style.module.css
@@ -203,6 +203,7 @@
     background-color: rgba(255, 255, 255, 0.75);
     background-image: url("/background.png");
     background-position: center 25%;
+    background-repeat: no-repeat;
     background-size: cover;
     padding: min(120px, 24svmin) min(48px, 12svmin);
 
